# IRKdebug

./: CMakeLists.txt  IRKdebug.qrc  README.md  connectionmanager.cpp  connectionmanager.h  irkerror.h  irkviewfactory.cpp  irkviewfactory.h  main.cpp  terminalwidget.cpp  terminalwidget.h  terminalwidget.ui
